# ruvon-echoforge

./: .env.sample  .gitignore  Dockerfile.bridge  Dockerfile.mock-valr  README.md  TRADING_MANUAL.md  cspell.json  docker-compose.yml  echo_logic.md  echoforge.config.yaml  nats-stream-setup.sh  nats.conf  pyproject.toml  start.sh
browser/: build.sh  index.html  mesh.js  ort.js  package-lock.json  package.json  phic_client.js  phic_defaults.js  ring_buffer.js  serve.py  session_recorder.js  trystero-torrent.js  tuning_guide.html
browser/models/: ofi_model.onnx  signal_model.onnx  train_ofi_model.py  train_signal_model.py
browser/utils/: stats.js
browser/workers/: correlation_worker.js  echoforge_worker.js  execution_worker.js  guardian_worker.js  inference_worker.js  macro_worker.js  nociceptor_worker.js  orderbook_worker.js
daemon/: echoforge-edge.db  package.json
daemon/src/: runner.js
daemon/src/adapters/: binance-ws.js  valr-ws.js
daemon/src/shims/: indexed-db.js
daemon/src/workers/: execution_entry.js
dashboard/: Dockerfile.dashboard  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
proto/: echoforge.proto  sentinel.proto
signaling/: Dockerfile.tracker  package-lock.json  package.json  tracker.js
src/ruvon_echoforge/: __init__.py
tests/: decay_tuner.py  test_bridge_integration.py  test_echoforge_extension.py  test_workflow_steps.py
tests/mock_valr/: replay_gym.py  server.py  test_mock_valr.py
workflows/: echoforge_emergency_freeze.yaml  echoforge_model_retrain.yaml  echoforge_phic_update.yaml
(+39 files in other folders)
